# kuroi-image-host

./: README.md
images/: IMG_0072.HEIC  IMG_3126.HEIC
other/Ch15_WebAPI_REST_GraphQL_demo_20230525/: demo.py  pyproject.toml
